добавил спрайт, но пока криво отображается

--- a/src/index.html
+++ b/src/index.html
@@ -22,17 +22,61 @@
 color: #545454;
 font-size: 44px;
 }
+.icon-search {
+color: #545454;
+font-size: 18px;
+}
 </style>
   </head>
   <body>
      <body>
     <header>
       <h1>
-        <i class="material-icons icon-favorite">favorite</i>
-      <i class="material-icons icon-social">facebook</i>
+       <i class="material-icons icon-favorite">favorite</i>
+
+        <svg class="icon-search" width="" height="">
+          <use href="./images/sprite.svg#icon-search"></use>
+        </svg>
+        <i class="material-icons white search-icon">search</i>
+
+
+<!-- <i class="material-icons icon-social">github</i> -->
+<svg class="github" width="" height="">
+  <use href="./images/sprite.svg#github"></use>
+</svg>
+
+
+<!-- <i class="material-icons icon-social">facebook</i> -->
+<svg class="facebook" width="" height="">
+  <use href="./images/sprite.svg#facebook"></use>
+</svg>
+
+
+<!-- <i class="material-icons icon-social">instagram</i> -->
+<svg class="instagram" width="" height="">
+  <use href="./images/sprite.svg#instagram"></use>
+</svg>
+
+
+<!-- <i class="material-icons icon-social">linkedin</i> -->
+<svg class="linkedin" width="" height="">
+  <use href="./images/sprite.svg#linkedin"></use>
+</svg>
+
+
+<!-- <i class="material-icons icon-social">icon-close</i> -->
+<svg class="icon-close" width="" height="">
+  <use href="./images/sprite.svg#icon-close"></use>
+</svg>
+
+
+<!-- <i class="material-icons icon-social">icon-film</i> -->
+<svg class="icon-folm" width="" height="">
+  <use href="./images/sprite.svg#icon-film"></use>
+</svg>
+
       <i class="material-icons icon-favorite">navigate_next</i>
       <i class="material-icons icon-favorite">navigate_before</i>
-
       </h1>
       <include src="./partials/header.html"></include>
     </header>
