--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,11 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
       rel="stylesheet">
-      <style>
-.icon-favorite {
-  color: #ff6b08;
-  font-size: 100px;
-}
-.icon-social {
-color: #545454;
-font-size: 44px;
-}
-</style>
+
   </head>
   <body>
      <body>
