Добавляє стилі до пагінації

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       <div class="container"></div>
 
     <!-- <include src="./partials/example.html"></include> -->
-    <!-- <include src="./partials/example.html"></include> -->
+   <include src="./partials/pagination.html"></include> 
 
     </div>
 </main>
