--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
           <!-- Сюда Сергей Богуш   выводит filmCards<li> -->
 
         </ul>
+        <include src="./partials/lightbox.html"></include>
         <include src="./partials/pagination.html"></include>
       </div>
     </main>
