--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <main>
       <div class="container">
         <ul id="gallery" class="gallery">
-          <!-- Сюда Сергей Богуш   выводит filmCards -->
+          <!-- Вывод filmCards -->
         </ul>
         <include src="./partials/spinner.html"></include>
         <include src="./partials/lightbox.html"></include>
