--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
     </main>
     <footer class="footer">
       <include src="./partials/footer.html"></include>
+      <include src="./partials/teamModal.html"></include>
     </footer>
     <!-- 🍅Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
