--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
   <main>
     <div class="container">
       <include src="./partials/spinner.html"></include>
+      <include src="./partials/swichTime.html"></include>
       <ul id="gallery" class="gallery">
         <!-- Вывод filmCards -->
       </ul>
