--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header class="overlay">
+  <header class=" header header__background-home " data-index="header">
     <!-- 🍅Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
   </header>
