--- a/index.html
+++ b/index.html
@@ -1,4 +1,138 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Filmoteka</title><link rel="apple-touch-icon" sizes="180x180" href="/Team-project-Sparks-of-Sharks/apple-touch-icon.c9698063.png"><link rel="icon" type="image/png" sizes="32x32" href="/Team-project-Sparks-of-Sharks/favicon-32x32.f8ab6178.png"><link rel="icon" type="image/png" sizes="16x16" href="/Team-project-Sparks-of-Sharks/favicon-16x16.b8d34bcb.png"><link rel="manifest" href="/Team-project-Sparks-of-Sharks/site.webmanifest"><meta name="msapplication-TileColor" content="#da532c"><meta name="theme-color" content="#ffffff"><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"><link rel="stylesheet" href="/Team-project-Sparks-of-Sharks/src.54e7ff3c.css"></head><body> <header class="overlay">  <div class="container header header__background-home" data-index="header"> <nav class="nav"> <a href="" class="logo-style nav-logo"> <img class="nav-logo-icon" src="/Team-project-Sparks-of-Sharks/logo.8dda18da.svg" alt="filmoteka"> <span class="hidden-logo logo-text">Filmoteka</span> </a> <div class="flex"> <button class="current nav-btn" data-index="home" id="homeBtn">HOME</button> <button class="nav-btn" data-index="libraryBtn">MY LIBRARY</button> </div> </nav> <div data-index="headerContent"> <form class="film-search"> <input class="film-search-input" type="text" placeholder="Search films" autocomplete="off"><i class="material-icons material-icons-search">search</i> <p> </p> </form> </div> </div> </header> <main> <div class="container"> <div class="spinner visually-hidden" title="Loading..."> <svg version="1.1" id="loader" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="200px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"> <path fill="#e74d3cc0" d="M31.6,3.5C5.9,13.6-6.6,42.7,3.5,68.4c10.1,25.7,39.2,38.3,64.9,28.1l-3.1-7.9c-21.3,8.4-45.4-2-53.8-23.3
-  c-8.4-21.3,2-45.4,23.3-53.8L31.6,3.5z"> <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="3s" from="0 50 50" to="360 50 50" repeatCount="indefinite"></animateTransform> </path> <path fill="#e74d3cc0" d="M42.3,39.6c5.7-4.3,13.9-3.1,18.1,2.7c4.3,5.7,3.1,13.9-2.7,18.1l4.1,5.5c8.8-6.5,10.6-19,4.1-27.7
-  c-6.5-8.8-19-10.6-27.7-4.1L42.3,39.6z"> <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="1s" from="0 50 50" to="-360 50 50" repeatCount="indefinite"></animateTransform> </path> <path fill="#ff6b01a9" d="M82,35.7C74.1,18,53.4,10.1,35.7,18S10.1,46.6,18,64.3l7.6-3.4c-6-13.5,0-29.3,13.5-35.3s29.3,0,35.3,13.5
-  L82,35.7z"> <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="2s" from="0 50 50" to="360 50 50" repeatCount="indefinite"></animateTransform> </path> </svg> </div> <div class="toolbar_time"> <p class="time-name">Top of the</p> <div class="time-switch"> <p class="week-time">Week</p> <div class="time-switch__control"> <input class="time-switch__toggle" type="checkbox" name="time-switch__toggle" id="time-switch__toggle" aria-label="Переключить между днем и неделей"> <label aria-hidden="true" class="time-switch__track" for="time-switch__toggle"> </label> <div aria-hidden="true" class="time-switch__marker"></div> </div> <p class="day-time">Day</p> </div> </div> <ul id="gallery" class="gallery">  </ul> <div class="js-lightbox lightbox"> <div class="lightbox__overlay"></div> <div class="lightbox__content"> </div> </div> <div class="pagination__container"> <div class="pagination__container_pages"> <div class="arrow_left pag-arrow"> <p class="arrow_elem"><i class="icon-navigate material-icons">navigate_before</i></p> </div> <div class="pagenumbers" id="pagination"></div> <div class="arrow_right pag-arrow"> <p class="arrow_elem"><i class="icon-navigate material-icons">navigate_next</i></p> </div> </div> </div> </div> </main> <footer class="footer"> <div class="container"> <div class="footer-page"> <p class="footer-text">&copy;2021 | All Rights Reserved |</p> <p class="footer-text"> Developed with <svg id="heart" width="16" height="16" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M7 12.88L6.02 11.9C2.38 8.68 0 6.51 0 3.85C0 1.68 1.68 0 3.85 0C5.04 0 6.23 0.56 7 1.47C7.77 0.56 8.96 0 10.15 0C12.32 0 14 1.68 14 3.85C14 6.51 11.62 8.68 7.98 11.9L7 12.88Z" fill="#FF6B08"></path> </svg> by <a class="footer-link js-team-modal team-modal">GoIT Students</a> </p> </div> </div> --> </footer>  <script src="/Team-project-Sparks-of-Sharks/src.672a93c7.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Filmoteka</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.98cbf7c9.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.8d7b58f0.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.9eb949d3.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/src.e31bb0bc.css"></head>
+
+  <body>
+    <header class="overlay">
+      <!-- 🍅Так добавляются фрагменты в главные HTML-файлы страниц. -->
+      <div class="container header header__background-home" data-index="header">
+  <nav class="nav">
+    <a href="" class="nav-logo logo-style">
+      <img class="nav-logo-icon" src="/logo.ffec81a8.svg" alt="filmoteka">
+      <span class="logo-text hidden-logo">Filmoteka</span>
+    </a>
+    <!-- <div class=""> -->
+    <!-- место для личного кабинета -->
+    <!-- </div>  -->
+    <div class="flex">
+      <button class="nav-btn current" data-index="home" id="homeBtn">HOME</button>
+      <button class="nav-btn" data-index="libraryBtn">MY LIBRARY</button>
+    </div>
+  </nav>
+  <div data-index="headerContent">
+    <form class="film-search">
+      <input class="film-search-input" type="text" placeholder="Search films" autocomplete="off"><i class="material-icons material-icons-search">search</i>
+      <p>
+        <!-- fetch status -->
+      </p>
+    </form>
+  </div>
+</div>
+
+    </header>
+
+    <main>
+      <div class="container">
+        <!-- =================spinner=============== -->
+<div class="spinner visually-hidden" title="Loading...">
+  <svg version="1.1" id="loader" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="200px" height="200px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+    <path fill="#e74d3cc0" d="M31.6,3.5C5.9,13.6-6.6,42.7,3.5,68.4c10.1,25.7,39.2,38.3,64.9,28.1l-3.1-7.9c-21.3,8.4-45.4-2-53.8-23.3
+  c-8.4-21.3,2-45.4,23.3-53.8L31.6,3.5z">
+      <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="3s" from="0 50 50" to="360 50 50" repeatCount="indefinite"></animateTransform>
+    </path>
+    <path fill="#e74d3cc0" d="M42.3,39.6c5.7-4.3,13.9-3.1,18.1,2.7c4.3,5.7,3.1,13.9-2.7,18.1l4.1,5.5c8.8-6.5,10.6-19,4.1-27.7
+  c-6.5-8.8-19-10.6-27.7-4.1L42.3,39.6z">
+      <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="1s" from="0 50 50" to="-360 50 50" repeatCount="indefinite"></animateTransform>
+    </path>
+    <path fill="#ff6b01a9" d="M82,35.7C74.1,18,53.4,10.1,35.7,18S10.1,46.6,18,64.3l7.6-3.4c-6-13.5,0-29.3,13.5-35.3s29.3,0,35.3,13.5
+  L82,35.7z">
+      <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="2s" from="0 50 50" to="360 50 50" repeatCount="indefinite"></animateTransform>
+    </path>
+  </svg>
+</div>
+<!-- ================= END spinner=============== -->
+          <!-- Разметка переключателя Week - Day -->
+<div class="toolbar_time">
+  <p class="time-name">Top of the</p>
+  <div class="time-switch">
+    <p class="week-time">Week</p>
+    <div class="time-switch__control">
+      <input class="time-switch__toggle" type="checkbox" name="time-switch__toggle" id="time-switch__toggle" aria-label="Переключить между днем и неделей">
+      <label aria-hidden="true" class="time-switch__track" for="time-switch__toggle"> </label>
+      <div aria-hidden="true" class="time-switch__marker"></div>
+    </div>
+    <p class="day-time">Day</p>
+  </div>
+</div>
+
+        <ul id="gallery" class="gallery">
+          <!-- Вывод filmCards -->
+        </ul>
+
+        <div class="lightbox js-lightbox">
+    <div class="lightbox__overlay"></div>
+
+    <div class="lightbox__content">
+
+    </div>
+
+
+</div>
+        <div class="pagination__container">
+  <div class="pagination__container_pages">
+    <div class="pag-arrow arrow_left">
+      <p class="arrow_elem"><i class="material-icons icon-navigate">navigate_before</i></p>
+    </div>
+    <div class="pagenumbers" id="pagination"></div>
+    <div class="pag-arrow arrow_right">
+      <p class="arrow_elem"><i class="material-icons icon-navigate">navigate_next</i></p>
+    </div>
+  </div>
+</div>
+
+        <div class="scroll-up">
+          <svg class="scroll-up__svg" viewBox="-2 -2 52 52">
+            <path class="scroll-up__svg-path" d="
+        M24,0
+        a24,24 0 0,1 0,48
+        a24,24 0 0,1 0,-48
+        "></path>
+          </svg>
+          <i class="material-icons arrow_up">keyboard_arrow_up</i>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+  <div class="footer-page">
+    <p class="footer-text">&copy;2021 | All Rights Reserved |</p>
+    <p class="footer-text">
+      Developed with
+      <svg id="heart" width="16" height="16" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7 12.88L6.02 11.9C2.38 8.68 0 6.51 0 3.85C0 1.68 1.68 0 3.85 0C5.04 0 6.23 0.56 7 1.47C7.77 0.56 8.96 0 10.15 0C12.32 0 14 1.68 14 3.85C14 6.51 11.62 8.68 7.98 11.9L7 12.88Z" fill="#FF6B08"></path>
+      </svg>
+      by <a class="js-team-modal team-modal footer-link">GoIT Students</a>
+    </p>
+    
+  </div>
+</div>
+
+    </footer>
+    <!-- 🍅Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="/src.e31bb0bc.js"></script>
+  </body>
+</html>
