--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
-    />
+    /> -->
   </head>
 
   <body>
