--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,13 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
-    <link
+    <link rel="preload" href="/fonts/roboto-v27-latin-500.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/roboto-v27-latin-regular.woff2" as="font" crossorigin="anonymous">
+    <!-- <link rel="preload" href="/fonts/roboto-v27-latin-500.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/roboto-v27-latin-regular.woff2" as="font" crossorigin="anonymous"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" /> -->
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     /> -->
