--- a/src/index.html
+++ b/src/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filmoteka</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
 
-    <link rel="preload" href="/fonts/roboto-v27-latin-500.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="/fonts/roboto-v27-latin-regular.woff2" as="font" crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Filmoteka</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
-    
-    <!-- <link
+  <link rel="preload" href="/fonts/roboto-v27-latin-500.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/roboto-v27-latin-regular.woff2" as="font" crossorigin="anonymous">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
+
+  <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     /> -->
-  </head>
+</head>
 
-  <body>
-    <header class="overlay">
-      <!-- 🍅Так добавляются фрагменты в главные HTML-файлы страниц. -->
-      <include src="./partials/header.html"></include>
-    </header>
+<body>
+  <header class="overlay">
+    <!-- 🍅Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/header.html"></include>
+  </header>
 
-    <main>
-      <div class="container">
-        <include src="./partials/spinner.html"></include>
-        <include src="./partials/swichTime.html"></include>
-        <ul id="gallery" class="gallery">
-          <!-- Вывод filmCards -->
-        </ul>
+  <main>
+    <div class="container">
+      <include src="./partials/spinner.html"></include>
+      <include src="./partials/swichTime.html"></include>
+      <include src="./partials/error.html"></include>
+      <ul id="gallery" class="gallery">
+        <!-- Вывод filmCards -->
+      </ul>
 
-        <include src="./partials/lightbox.html"></include>
-        <include src="./partials/pagination.html"></include>
+      <include src="./partials/lightbox.html"></include>
+      <include src="./partials/pagination.html"></include>
 
-        <div class="scroll-up">
-          <svg class="scroll-up__svg" viewBox="-2 -2 52 52">
-            <path
-              class="scroll-up__svg-path"
-              d="
+      <div class="scroll-up">
+        <svg class="scroll-up__svg" viewBox="-2 -2 52 52">
+          <path class="scroll-up__svg-path" d="
         M24,0
         a24,24 0 0,1 0,48
         a24,24 0 0,1 0,-48
-        "
-            ></path>
-          </svg>
-          <i class="material-icons arrow_up">keyboard_arrow_up</i>
-        </div>
+        "></path>
+        </svg>
+        <i class="material-icons arrow_up">keyboard_arrow_up</i>
       </div>
-    </main>
-    <footer class="footer">
-      <include src="./partials/footer.html"></include>
-    </footer>
-    <!-- 🍅Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-  </body>
+    </div>
+  </main>
+  <footer class="footer">
+    <include src="./partials/footer.html"></include>
+  </footer>
+  <!-- 🍅Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+</body>
+
 </html>
